# learning-opengl

./: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
lib/glad/include/glad/: gl.h
resources/shaders/: cube.frag  cube.vert  shader.vert
shader/: shader.frag  shader.vert
src/: camera.c  camera.h  err.h  fs.c  fs.h  main.c  mesh.c  mesh.h  model.c  model.h  shader.c  shader.h
